@startuml

class JobType
{
    + JobType(std::string name, uint32_t id)
     * @brief : Construct a new JobType object with the specified parameters
     * @param name : The name of the job type
     * @param id : A unique identifier for the job type

    + ~JobType() = default

    + 

    + bool operator==(const JobType& other) const
     * @brief : Equality operator to compare two JobType objects
     * @param other : The other JobType object to compare with
     * @return bool : True if both JobType objects are equal, false otherwise

    + bool operator!=(const JobType& other) const
     * @brief : Non-equality operator to compare two JobType objects
     * @param other : The other JobType object to compare with
     * @return bool : True if both JobType objects are not equal, false otherwise

    + std::string_view GetName() const
     * @brief : Get the name of the job type
     * @return std::string_view : The name of the job type

    + uint32_t GetID() const
     * @brief : Get the unique identifier of the job type
     * @return uint32_t : The unique identifier of the job type

    + void Update(std::string name, uint32_t id)
     * @brief : Update the name and ID of the job type
     * @param name : The new name of the job type
     * @param id : The new unique identifier for the job type

    + void Reset()
     * @brief : Reset the job type to a default state
    ---
    - std::string name_
     * The name of the job type, used for identification and categorization

    - uint32_t id_
     * A unique identifier for the job type, used for efficient lookup and management

    - mutable std::mutex mutex_
     * A mutex to protect access to the job type's data, allowing for thread-safe updates
}

class JobState
{
    + JobState(std::shared_future<void> completion)
     * @brief : Construct a new JobState object with the specified completion future
     * @param completion : A shared future that allows multiple threads to wait for the job's completion

    + ~JobState() = default

    + bool IsCompleted() const
     * @brief : Check if the job has been completed
     * @return bool : True if the job is completed, false otherwise

    + bool WaitForCompletion() const
     * @brief : Wait for the job to be completed and return the completion status
     * @return bool : True if the job is completed, false otherwise
    ---
    - std::shared_future<void> completion_
     * A shared future that allows multiple threads to wait for the job's completion
}

class Job
{
    + Job(JobType type, std::function<void()> job_func)
     * @brief : Construct a new Job object with the specified job type and function to execute
     * @param type : The type of the job
     * @param job_func : The function that represents the work to be done by the job

    + ~Job() = default

    + JobState GetState() const
     * @brief : Get the current state of the job
     * @return JobState : The current state of the job

    + JobType GetType() const
     * @brief : Get the type of the job
     * @return JobType : The type of the job

    + void Execute()
     * @brief : Execute the job's function and update the completion status
     * @note : This method should be called by the worker thread that is processing the job
    ---
    - std::function<void()> job_fun_
     * The function that represents the work to be done by the job

    - std::shared_ptr<std::promise<void>> promise_
     * A promise that will be fulfilled when the job is completed, allowing other threads to wait for its completion

    - mutable std::shared_future<void> shared_
     * A shared future that allows multiple threads to wait for the job's completion

    - JobType type_
     * The type of the job, which can be used for categorization and scheduling

}
Job *-- JobType
Job *-- JobState

class ThreadController
{
    + ThreadController()
     * @brief : Construct a new ThreadController object that manages the worker thread and job execution

    + ~ThreadController() = default

    + bool HasStopSignal() const
     * @brief : Check if the stop signal has been set for the worker thread
     * @return bool : True if the stop signal is set, false otherwise

    + void SignalStop()
     * @brief : Signal the worker thread to stop processing jobs and exit

    + void Wait(std::function<bool()> predicate)
     * @brief : Wait for a condition to be met, using the provided predicate function
     * @param predicate : A function that returns true when the condition is met, allowing the worker thread to proceed

    + void Notify()
     * @brief : Notify the condition variable to wake up the thread
    ---
    - std::condition_variable condition_
     * A condition variable to signal the worker thread when a new job is dispatched

    - std::mutex mutex_
     * A mutex to protect access to condition variable

    - std::atomic<bool> stop_signal_
     * An atomic flag to signal the worker thread to stop processing and exit
}

class WorkerThread
{
    + WorkerThread(std::function<void(ThreadController&, JobType&)> worker_loop_func)
     * @brief : Create a new worker thread that will process jobs from the job queue
     * @param worker_loop_func : A function that represents the main loop of the worker thread
    
    + ~WorkerThread()
     * @brief : Signal the worker thread to stop and join it

    + uint32_t GetID() const
     * @brief : Get the unique identifier of the worker thread
     * @return uint32_t : The unique identifier of the worker thread

    + JobType GetWorkingJobType() const
     * @brief : Get the type of job that the worker thread is currently processing
     * @return JobType : The type of job being processed, or a default value if the worker thread is idle
    ---
    {static} - uint32_t next_id_
     * A static variable that keeps track of the next unique identifier to assign to a new worker thread

    - uint32_t id_
     * A unique identifier for the worker thread, used for tracking and management

    - std::thread thread_
     * The actual thread object that runs the worker loop

    - ThreadController thread_controller_
     * A controller that manages the worker thread's execution and stopping behavior

    - JobType current_job_type_
     * Job type currently being processed by the worker thread
}
WorkerThread *-- ThreadController
WorkerThread *-- JobType

class JobQueue
{
    + JobQueue() = default
    + ~JobQueue() = default

    + void PushJob(Job job)
     * @brief : Add a new job to the queue for execution by worker threads
     * @param job : The job to be added to the queue

    + Job PopJob()
     * @brief : Remove and return the next job from the queue for execution by a worker thread
     * @return Job : The next job to be executed, or a default-constructed job

    + bool IsEmpty() const
     * @brief : Check if the job queue is empty
     * @return bool : True if the queue is empty, false otherwise
    ---
    + std::queue<Job> job_queue_
     * A queue that holds jobs waiting to be executed by worker threads

    + mutable std::mutex mutex_
     * A mutex to protect access to the job queue
}
JobQueue *-- Job

class JobScheduler
{
    + JobScheduler()
     * @brief : Construct a new JobScheduler object

    + ~JobScheduler()

    + JobState ScheduleJob(Job job)
     * @brief : Schedule a job to be executed by an idle worker thread
     * @param job : The job to be scheduled
     * @return JobState : The state of the scheduled job (e.g., pending, running, completed)

    + const std::vector<std::unique_ptr<WorkerThread>>& GetWorkerThreads() const
     * @brief : Get a reference to the vector of worker threads managed by the job scheduler
     * @return const std::vector<std::unique_ptr<WorkerThread>>& : A reference to the vector of worker threads
    ---
    - std::vector<std::unique_ptr<WorkerThread>> worker_threads_
     * A vector that holds the worker threads responsible for executing jobs

    - JobQueue job_queue_
     * A queue that holds jobs waiting to be executed by worker threads
}
JobScheduler *-- WorkerThread
JobScheduler *-- JobQueue

class JobExecutionInfo
{
    + JobExecutionInfo(uint32_t worker_thread_id, JobType job_type)
     * @brief : Construct a new JobExecutionInfo object with the specified worker thread ID and job type
     * @param worker_thread_id : The ID of the worker thread that is processing the job
     * @param job_type : The type of the job being processed

    + ~JobExecutionInfo() = default

    + uint32_t GetWorkerThreadID() const
     * @brief : Get the ID of the worker thread that is processing the job
     * @return uint32_t : The ID of the worker thread

    + JobType GetJobType() const
     * @brief : Get the type of the job being processed
     * @return JobType : The type of the job being processed
    ---
    - uint32_t worker_thread_id_
     *  The worker thread ID which processes the job

    - JobType job_type_
     *  The type of the job being processed
}
JobExecutionInfo *-- JobType

class JobTracker
{
    + JobTracker(const std::vector<std::unique_ptr<WorkerThread>>& worker_threads)
     * @brief : Construct a new JobTracker object with the specified worker threads

    + ~JobTracker() = default

    + std::vector<JobExecutionInfo> GetRunningJobInfos() const
     * @brief : Get a list of all currently running job execution information
     * @return std::vector<JobExecutionInfo> : A vector ofoJobExecutionInfo objects representing the currently running jobs

    + std::vector<JobExecutionInfo> GetThreadInfos() const
     * @brief : Get a list of all worker thread information, including their current job types
     * @return std::vector<JobExecutionInfo> : A vector of JobExecutionInfo objects representing the worker threads and their current job types
    ---
    - const std::vector<std::unique_ptr<WorkerThread>>& worker_threads_
     * A reference to the vector of worker threads, used to track the jobs currently being processed
}
JobTracker *-- WorkerThread
JobTracker ..> JobExecutionInfo


@enduml